--- a/app/src/main/res/layout/about_layout.xml
+++ b/app/src/main/res/layout/about_layout.xml
@@ -9,4 +9,12 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Built by a couple of people that don&apos;t know whats going on"
         android:id="@+id/textView6" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BACK"
+        android:id="@+id/backButton"
+        android:onClick="onBackPress" />
+
 </LinearLayout>
