--- a/app/src/main/res/layout/screener_layout.xml
+++ b/app/src/main/res/layout/screener_layout.xml
@@ -9,4 +9,23 @@
         android:text="BACK"
         android:id="@+id/backButton"
         android:onClick="onBackPress" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Percent change from open"
+        android:id="@+id/openChangeButton"
+        android:onClick="onOpenChangePress" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView"
+        android:layout_gravity="center_horizontal" >
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView" />
+    </ScrollView>
 </LinearLayout>
