--- a/app/src/main/res/layout/createaccount_layout.xml
+++ b/app/src/main/res/layout/createaccount_layout.xml
@@ -4,17 +4,46 @@ android:orientation="vertical" android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:weightSum="1">
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textSize="30sp"
-    android:text= "Create Account"
-    android:id="@+id/textView2"
-    android:layout_below="@+id/linearLayout"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:layout_gravity="center_horizontal"
-    android:layout_weight="0.12" />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/linearLayout"
+        android:layout_gravity="center_horizontal"
+        android:text="Create Account"
+        android:textSize="30sp" />
+
+    <EditText
+        android:id="@+id/usernameText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="text"
+        android:hint="Username" />
+
+    <EditText
+        android:id="@+id/passwordText1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:hint="Password" />
+
+    <EditText
+        android:id="@+id/passwordText2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:hint="Password Again" />
+
+    <Button
+        android:id="@+id/createaccountButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Create Account" />
 
 
-    </LinearLayout>
+</LinearLayout>
